--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -1,3 +1,21 @@
-body{
+/* src/index.css */
+* {
+     box-sizing: border-box;
+     /* O Segredo para não quebrar layout */
      margin: 0;
+     padding: 0;
+}
+
+html,
+body {
+     overflow-x: hidden;
+     /* Impede rolagem horizontal indesejada */
+     width: 100%;
+     max-width: 100vw;
+}
+
+/* Garante que imagens nunca estourem o container */
+img {
+     max-width: 100%;
+     height: auto;
 }
